--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -27,15 +27,7 @@
 
 <div class="panel">
     <div class="body">
-
-        <div class="side-bar">
-            <ul>
-                <a href="">Statistics</a>
-                <a href="/TrainingOrders" class="selected">Training Orders</a>
-                <a href="/Employees">Manage Employees</a>
-                <a href="">Account Settings</a>
-            </ul>
-        </div>
+        <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
 
         <div class="properties">
             <div class="order-list">
