--- a/WCSTrainer/Pages/TrainingOrders/Scheduling.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Scheduling.cshtml
@@ -12,16 +12,15 @@
         <div class="properties">
             <div class="scheduling">
                 <div class="settings">
-                    <p>Year: @DateTime.Now.Year</p>
+                    <p>Year: @Model.selectedYear</p>
                     <p>Total Training Orders: @Model.countOrders()</p>
                     <p>Total Training Hours: @Model.countTotalOrderHours()</p>
                 </div>
                 <div class="main-view">
                     <div class="schedule">
                         @for (int month = 1; month <= 12; month++) {
-                            DateTime date = new DateTime(2024, month, 1);
+                            DateTime date = new DateTime(Model.selectedYear, month, 1);
                             string monthName = date.ToString("MMMM");
-
                             string type = "month-inactive";
 
                             if (DateTime.Now.Month == month) {
@@ -48,7 +47,6 @@
                                     }
                                 </div>
                                 <div class="stats">
-                                    
                                     <p>Total Hours: @Model.countOrderHours(month)</p>
                                     <p>Training Orders: @Model.countMonthOrders(month)</p>
                                 </div>
@@ -63,7 +61,10 @@
                         <div class="buttons">
                             <a class="btn nbg-btn btnWhite">Button</a>
                             <a class="btn nbg-btn btnWhite">Button</a>
-                            <a class="btn nbg-btn btnWhite">Button</a>
+                            <form method="post">
+                                <input asp-for="selectedYear" value="@Model.selectedYear" />
+                                <input type="submit" value="Save" class="btn bg-btn btnGreen" />
+                            </form>
                         </div>
                     </div>
                 </div>
