--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WCSTrainer</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/WCSTrainer.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/mobileSite.css" asp-append-version="true" />
 </head>
 
 <body>
