--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -16,7 +16,7 @@
             <div class="order-list2">
                 <div class="sorters">
                     <div class="btns">
-                        <a asp-page="Create" class="btn bg-btn btnWhite">Create New Order</a>
+                        <a asp-page="Create" class="btn bg-btn btnWhite">Add Employee</a>
                     </div>
                 </div>
                 <table id="dataTable">
@@ -35,9 +35,9 @@
                             <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
                             <td>@Html.DisplayFor(modelItem => item.LastName)</td>
                             <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                            <td><a asp-page="./Edit" asp-route-id="@item.Id">Edit</a></td>
-                            <td><a asp-page="./Details" asp-route-id="@item.Id">Details</a></td>
-                            <td><a asp-page="./Delete" asp-route-id="@item.Id">Delete</a></td>
+                            <td><a asp-page="./Edit" asp-route-id="@item.Id" class="btn bg-btn btnGreen">Edit</a></td>
+                            <td><a asp-page="./Details" asp-route-id="@item.Id" class="btn bg-btn btnGreen">Details</a></td>
+                            <td><a asp-page="./Delete" asp-route-id="@item.Id" class="btn bg-btn btnGreen">Delete</a></td>
                         </tr>
                     }
                 </table>
