--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -28,7 +28,6 @@
 <div class="panel">
     <div class="body">
         <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
-
         <div class="properties">
             <div class="order-list">
                 <ul>
@@ -68,27 +67,28 @@
             </div>
             <div class="tool-container">
                 <div class="tools">
+                    <p class="title">Options:</p>
                     <div class="search">
-                        <p>Search for a training order ID:</p>
+                        <p class="section-title">Search Training Orders:</p>
                         <input type="search" onchange="update(this)">
                     </div>
                     <div class="selections">
-                        <p class="title">Show in List:</p>
+                        <p class="section-title">Show in List:</p>
                         <div class="section">
                             <input type="checkbox" checked id="Verified" onchange="checkedBox(this)" />
-                            <p class="info">Verified</p>
+                            <p class="section-info">Verified</p>
                         </div>
                         <div class="section">
                             <input type="checkbox" checked id="Completed" onchange="checkedBox(this)" />
-                            <p class="info">Completed</p>
+                            <p class="section-info">Completed</p>
                         </div>
                         <div class="section">
                             <input type="checkbox" checked id="Active" onchange="checkedBox(this)" />
-                            <p class="info">Active</p>
+                            <p class="section-info">Active</p>
                         </div>
                         <div class="section">
                             <input type="checkbox" checked id="Awaiting Approval" onchange="checkedBox(this)" />
-                            <p class="info">Awaiting Approval</p>
+                            <p class="section-info">Awaiting Approval</p>
                         </div>
                     </div>
                     <div class="btns">
