--- a/WCSTrainer/Pages/TrainingOrders/Scheduling.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Scheduling.cshtml
@@ -11,67 +11,78 @@
         <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
         <div class="properties">
             <div class="scheduling">
-                <div class="settings">
-                    <p>Year: @Model.selectedYear</p>
-                    <p>Total Training Orders: @Model.countOrders()</p>
-                    <p>Total Training Hours: @Model.countTotalOrderHours()</p>
-                </div>
-                <div class="main-view">
-                    <div class="schedule">
-                        @for (int month = 1; month <= 12; month++) {
-                            DateTime date = new DateTime(Model.selectedYear, month, 1);
-                            string monthName = date.ToString("MMMM");
-                            string type = "month-inactive";
+                <div class="schedule">
+                    @for (int month = 1; month <= 12; month++) {
+                        DateTime date = new DateTime(Model.selectedYear, month, 1);
+                        string monthName = date.ToString("MMMM");
+                        string type = "month-inactive";
 
-                            if (DateTime.Now.Month == month && DateTime.Now.Year == Model.selectedYear) {
-                                type = "month-active";
-                            }
-
-                            <div class="month @type">
-                                <div class="title">
-                                    <p>@monthName</p>
-                                </div>
-                                <div class="info">
-                                    <p>Preview:</p>
-                                    @if (Model.getFirstTrainingOrder(month, 0) != null) {
-                                        var order = @Model.getFirstTrainingOrder(month, 0);
-                                        <div class="order live">Order #@order.Id - @order.beginDate</div>
-                                    } else {
-                                        <div class="order gray"></div>
-                                    }
-                                    @if (Model.getFirstTrainingOrder(month, 1) != null) {
-                                        var order = @Model.getFirstTrainingOrder(month, 1);
-                                        <div class="order live">Order #@order.Id - @order.beginDate</div>
-                                    } else {
-                                        <div class="order gray"></div>
-                                    }
-                                </div>
-                                <div class="stats">
-                                    <p>Total Hours: @Model.countOrderHours(month)</p>
-                                    <p>Training Orders: @Model.countMonthOrders(month)</p>
-                                </div>
-                            </div>
+                        if (DateTime.Now.Month == month && DateTime.Now.Year == Model.selectedYear) {
+                            type = "month-active";
                         }
+
+                        <div class="month @type">
+                            <div class="title">
+                                <p>@monthName</p>
+                            </div>
+                            <div class="info">
+                                <p>Preview:</p>
+                                @if (Model.getFirstTrainingOrder(month, 0) != null) {
+                                    var order = @Model.getFirstTrainingOrder(month, 0);
+                                    <div class="order live">Order #@order.Id - @order.beginDate</div>
+                                } else {
+                                    <div class="order gray"></div>
+                                }
+                                @if (Model.getFirstTrainingOrder(month, 1) != null) {
+                                    var order = @Model.getFirstTrainingOrder(month, 1);
+                                    <div class="order live">Order #@order.Id - @order.beginDate</div>
+                                } else {
+                                    <div class="order gray"></div>
+                                }
+                            </div>
+                            <div class="stats">
+                                <p>Total Hours: @Model.countOrderHours(month)</p>
+                                <p>Training Orders: @Model.countMonthOrders(month)</p>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+            <div class="tool-container">
+                <div class="tools">
+                    <p class="title">Options: </p>
+                    <div class="search">
+                        <p class="section-title">Search By Trainer:</p>
+                        <input type="search" />
                     </div>
-                    <div class="options">
-                        <div class="search">
-                            <p class="title">Options: </p>
-                            <div class="section">
-                                <p>Search By Trainer:</p>
-                                <input type="search" />
-                            </div>
-                            <div class="section">
-                                <p>Year:</p>
-                                <form method="post">
-                                    <select asp-for="selectedYear" class="form-drop2">
-                                        @for (int i = 0; i <= 10; i++) {
-                                            int newYear = (DateTime.Now.Year - 5) + i;
-                                            <option value="@newYear">@newYear</option>
-                                        }
-                                    </select>
-                                    <input type="submit" value="Search" class="btn bg-btn btnGreen" />
-                                </form>
-                            </div>
+                    <div class="search">
+                        <p>Year:</p>
+                        <form method="post">
+                            <select asp-for="selectedYear" class="form-drop2">
+                                @for (int i = 0; i <= 10; i++) {
+                                    int newYear = (DateTime.Now.Year - 5) + i;
+                                    <option value="@newYear">@newYear</option>
+                                }
+                            </select>
+                            <input type="submit" value="Search" class="btn bg-btn btnGreen" />
+                        </form>
+                    </div>
+                    <div class="info">
+                        <div class="info-section">
+                            <p>Training Orders For:</p>
+                            <p>@Model.searchFor</p>
+                        </div>
+                        <div class="info-section">
+                            <p>Year:</p>
+                            <p>@Model.selectedYear</p>
+                        </div>
+                        <div class="info-section">
+                            <p>Total Training Orders:</p>
+                            <p>@Model.countOrders()</p>
+                        </div>
+                        <div class="info-section">
+                            <p>Total Training Hours: </p>
+                            <p>@Model.countTotalOrderHours()</p>
                         </div>
                     </div>
                 </div>
