--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -27,7 +27,7 @@
     --textMain: black;
     --textSub1: black;
     --textSub2: black;
-    --mainTheme: #ffffff;
+    --mainTheme: #e45d5d;
     --red1: #e00606;
     --red2: #d81d1d;
     --blue1: black;
@@ -180,6 +180,7 @@ body {
             display: flex;
             flex-direction: row;
             width: 80%;
+            justify-content: space-between;
         }
             .panel .body .properties .user-form {
                 display: flex;
@@ -341,14 +342,25 @@ body {
             .panel .body .properties .tool-container {
                 margin-left: 30px;
                 display: flex;
-                width: 25%;
+                min-width: 20%;
+                width: 270px;
             }
+                .panel .body .properties .tool-container .section-title {
+                    font-size: 15px;
+                    color: var(--textMain);
+                }
                         .panel .body .properties .tool-container .tools {
                             display: flex;
                             flex-direction: column;
                             color: var(--textMain);
                             width: 100%;
                         }
+                            .panel .body .properties .tool-container .tools .title {
+                                padding-bottom: 10px;
+                                border-bottom: 1px solid var(--gray4);
+                                font-weight: bold;
+                                font-size: 17px;
+                            }
                             .panel .body .properties .tool-container .tools .btns {
                                 display: flex;
                                 flex-direction: column;
@@ -364,29 +376,57 @@ body {
                             .panel .body .properties .tool-container .tools .search {
                                 width: 100%;
                                 display: flex;
-                                height: 99px;
                                 flex-direction: column;
+                                margin-top: 20px;
                             }
+                                .panel .body .properties .tool-container .tools .search form {
+                                    display: flex;
+                                    justify-content: space-between;
+                                }
+                                    .panel .body .properties .tool-container .tools .search form input {
+                                        width: 65%;
+                                    }
                                 .panel .body .properties .tool-container .tools .search input {
-                                    height: 35px;
+                                    height: 30px;
                                     margin-top: 10px;
                                 }
-                                .panel .body .properties .tool-container .tools .search p {
-                                    font-size: 20px;
-                                    color: var(--textMain);
+                                .panel .body .properties .tool-container .tools .search select {
+                                    height: 30px;
+                                    margin-top: 10px;
+                                    width: 30%
                                 }
+                
                             .panel .body .properties .tool-container .tools .selections {
                                 margin-bottom: 20px;
+                                margin-top: 20px;
                             }
-                                .panel .body .properties .tool-container .tools .selections .title {
-                                }
+
                                 .panel .body .properties .tool-container .tools .selections .section {
                                     margin-top: 10px;
                                     display: flex;
+                                    justify-content: flex-start;
+                                    align-items: center;
                                 }
-                                    .panel .body .properties .tool-container .tools .selections .section .info {
-                                        margin-left: 7px;
-                                    }
+                                .panel .body .properties .tool-container .tools .selections .section-info {
+                                    margin-left: 7px;
+                                }
+
+                            .panel .body .properties .tool-container .tools .info {
+                                margin-top: 20px;
+                                display: flex;
+                                gap: 10px;
+                                font-size: 15px;
+                                flex-direction: column;
+                                background-color: var(--gray2);
+                                border: 1px solid var(--gray4);
+                                padding: 10px;
+                                border-radius: 7px;
+                            }
+
+                            .panel .body .properties .tool-container .tools .info-section {
+                                display: flex;
+                                justify-content: space-between;
+                            }
             .panel .body .properties .order-list {
                 overflow-y: scroll;
                 scrollbar-width: none;
@@ -488,137 +528,80 @@ body {
                         color: var(--textMain);
                     }
             .panel .body .properties .scheduling {
-                width: 100%;
+                width: 70%;
                 display: flex;
-                flex-direction: column;
             }
-                .panel .body .properties .scheduling .settings {
+                .panel .body .properties .scheduling .schedule {
+                    max-width: 100%;
                     display: flex;
-                    width: 100%;
-                    height: 150px;
-                    font-size: 20px;
-                    gap: 20px;
+                    align-content: flex-start;
+                    gap: 10px;
+                    flex-wrap: wrap;
                 }
-                .panel .body .properties .scheduling .main-view {
-                    display: flex;
-                    flex-direction: row;
-                    height: 100%;
-                    justify-content: space-between;
-                }
-                    .panel .body .properties .scheduling .main-view .schedule {
-                        height: 100%;
-                        display: flex;
-                        flex-wrap: wrap;
-                        align-content: flex-start;
-                        gap: 10px;
-                        max-width: 850px;
-                        margin-right: 20px;
-                    }
-                        .panel .body .properties .scheduling .main-view .schedule .month {
-                            width: 23%;
-                            min-width: 160px;
-                            min-height: 180px;
-                            display: flex;
-                            flex-direction: column;
-                            cursor: pointer;
-                            background-color: var(--gray2);
-                        }
-                        .panel .body .properties .scheduling .main-view .schedule .month-inactive {
-                            border: 1px solid var(--gray2);
-                        }
-                        .panel .body .properties .scheduling .main-view .schedule .month-active {
-                            border: 1px solid var(--mainTheme);
-                        }
-                        .panel .body .properties .scheduling .main-view .schedule .month-inactive:hover {
-                            background-color: var(--gray3);
-                            border: 1px solid var(--gray4);
-                        }
-                        .panel .body .properties .scheduling .main-view .schedule .month-active:hover {
-                            background-color: var(--gray3);
-                        }
-                            .panel .body .properties .scheduling .main-view .schedule .month .title {
-                                font-weight: bold;
-                                margin-bottom: 10px;
-                                border-bottom: 1px solid var(--gray4);
-                                padding: 5px;
-                            }
-                            .panel .body .properties .scheduling .main-view .schedule .month .info {
-                                display: flex;
-                                flex-direction: column;
-                                gap: 5px;
-                                padding: 5px;
-                            }
-                                .panel .body .properties .scheduling .main-view .schedule .month .info .order {
-                                    padding: 3px 5px;
-                                    font-size: 13px;
-                                    border-radius: 5px;
-                                    height: 14px;
-                                    display: flex;
-                                    align-items: center;
-                                }
-                                .panel .body .properties .scheduling .main-view .schedule .month .info .gray {
-                                    background-color: var(--gray1);
-                                }
-                                .panel .body .properties .scheduling .main-view .schedule .month .info .live {
-                                    background-color: var(--mainTheme);
-                                }
-                            .panel .body .properties .scheduling .main-view .schedule .month .stats {
-                                padding: 5px;
-                                color: var(--textSub2);
-                            }
-                    .panel .body .properties .scheduling .main-view .options {
-                        min-width: 170px;
-                        height: 100%;
-                        width: 20%;
+
+                    .panel .body .properties .scheduling .schedule .month {
+                        width: 23%;
+                        height: 200px;
+                        min-width: 160px;
+                        min-height: 180px;
                         display: flex;
                         flex-direction: column;
+                        cursor: pointer;
+                        background-color: var(--gray2);
                     }
 
-                    .panel .body .properties .scheduling .main-view .options .title {
-                        padding-bottom: 10px;
-                        border-bottom: 1px solid var(--gray4);
+                    .panel .body .properties .scheduling .schedule .month-inactive {
+                        border: 1px solid var(--gray2);
+                    }
+
+                    .panel .body .properties .scheduling .schedule .month-active {
+                        border: 1px solid var(--mainTheme);
+                    }
+
+                    .panel .body .properties .scheduling .schedule .month-inactive:hover {
+                        background-color: var(--gray3);
+                        border: 1px solid var(--gray4);
+                    }
+
+                    .panel .body .properties .scheduling .schedule .month-active:hover {
+                        background-color: var(--gray3);
+                    }
+
+                    .panel .body .properties .scheduling .schedule .month .title {
                         font-weight: bold;
+                        margin-bottom: 10px;
+                        border-bottom: 1px solid var(--gray4);
+                        padding: 5px;
                     }
-                        .panel .body .properties .scheduling .main-view .options .search {
+
+                    .panel .body .properties .scheduling .schedule .month .info {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 5px;
+                        padding: 5px;
+                    }
+
+                        .panel .body .properties .scheduling .schedule .month .info .order {
+                            padding: 3px 5px;
+                            font-size: 13px;
+                            border-radius: 5px;
+                            min-height: 14px;
                             display: flex;
-                            flex-direction: column;
-                            width: 100%;
-                            gap: 20px;
+                            align-items: center;
                         }
-                            .panel .body .properties .scheduling .main-view .options .search .section {
-                                width: 100%;
-                            }
-                                .panel .body .properties .scheduling .main-view .options .search .section input {
-                                    width: 100%;
-                                    height: 30px;
-                                }
 
-                                .panel .body .properties .scheduling .main-view .options .search .section form {
-                                    display: flex;
-                                    gap: 20px;
-                                }
-
-                                    .panel .body .properties .scheduling .main-view .options .search .section form select {
-                                        height: 30px;
-                                        font-size: 15px;
-                                    }
-
-                                    .panel .body .properties .scheduling .main-view .options .search .section form input {
-                                        height: 30px;
-                                    }
-
-                        .panel .body .properties .scheduling .main-view .options .selections {
-
+                        .panel .body .properties .scheduling .schedule .month .info .gray {
+                            background-color: var(--gray1);
                         }
-                        .panel .body .properties .scheduling .main-view .options .buttons {
-                            display: flex;
-                            flex-direction: column;
+
+                        .panel .body .properties .scheduling .schedule .month .info .live {
+                            background-color: var(--mainTheme);
                         }
-                            .panel .body .properties .scheduling .main-view .options .buttons .btn {
-                                border-bottom: 1px solid var(--gray4);
-                                display: flex;
-                                padding: 6px 0;
-                            }
+
+                    .panel .body .properties .scheduling .schedule .month .stats {
+                        padding: 5px;
+                        color: var(--textSub2);
+                    }
 
 /*-------------------------------------------------------*/
 /*                   UNIVERSAL BUTTONS                   */
@@ -738,9 +721,7 @@ body {
     backdrop-filter: blur(3px);
     z-index: 1;
 }
-.hidden {
-    display: none;
-}
+
 
 /*--------------------------------------------------------
                      DELETION POPUP                     
@@ -763,3 +744,57 @@ button {
     border: none;
 }
 
+/*--------------------------------------------------------
+                        COMPONENTS                     
+--------------------------------------------------------*/
+
+.people-component {
+    top: 10%;
+    position: fixed;
+    background-color: var(--gray1);
+    width: 1000px;
+    display: flex;
+    flex-direction: row;
+    border: 1px solid var(--gray4);
+    z-index: 2;
+    bottom: 10%;
+}
+
+    .people-component .people-container {
+        display: flex;
+        flex-direction: column;
+        border-right: 1px solid var(--gray4);
+        width: 30%;
+        padding: 10px;
+    }
+
+        .people-component .people-container .search {
+            display: flex;
+            border-bottom: 1px solid var(--gray4);
+        }
+
+            .people-component .people-container .search input {
+                height: 30px;
+                margin: 0;
+                padding: 0;
+                font-size: 18px;
+                width: 100%;
+            }
+
+        .people-component .people-container .people {
+            padding-top: 10px;
+            flex-grow: 1;
+            display: flex;
+            font-size: 18px;
+        }
+
+    .people-component .details {
+        padding: 10px;
+        display: flex;
+        flex-grow: 1;
+        font-size: 18px;
+    }
+
+.hidden {
+    display: none;
+}
