--- a/WCSTrainer/Pages/Components/People.razor
+++ b/WCSTrainer/Pages/Components/People.razor
@@ -7,6 +7,7 @@
     </div>
 </div>
 <div class="details">
+    <p class="title">FirstName LastName</p>
     Description
     <br />
     Availability
