--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -9,7 +9,7 @@
 
 
 <div id="people-component" class="people-component hidden">
-    <component type="typeof(People)" render-mode="WebAssemblyPrerendered" />
+    <component type="typeof(People)" render-mode="WebAssemblyPrerendered" param-Employees="@Model.Employees" />
 </div>
 
 <div class="overlay hidden"></div>
