--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -232,14 +232,10 @@ body {
                     }
                         .panel .body .properties .user-form .field-container .form-group .form .labels {
                             display: flex;
-                            flex-direction: row;
-                            align-items: center;
-                            background-color: var(--gray3);
-                            width: 50%;
-                            border: 1px solid var(--gray4);
-                            border-radius: 0 5px 0 0;
+                            margin-bottom: 3px;
                         }
                             .panel .body .properties .user-form .field-container .form-group .form .labels .control-label {
+
                             }
                             .panel .body .properties .user-form .field-container .form-group .form .labels .text-danger {
                                 color: #ff3434;
@@ -248,7 +244,7 @@ body {
                     .panel .body .properties .user-form .field-container .form-group .form-control {
                         width: 100%;
                         border: none;
-                        height: 100%;
+                        height: 25px;
                     }
                     .panel .body .properties .user-form .field-container .form-group textarea {
                         border-radius: 5px;
@@ -627,6 +623,12 @@ body {
 }
 .btnWhite {
     color: var(--textMain);
+}
+    .btnWhite:hover {
+        background-color: var(--gray4);
+    }
+.btnGray {
+    color: var(--gray4);
 }
     .btnWhite:hover {
         background-color: var(--gray3);
